# wordle-hint

./: Dockerfile  README.md  build.sh
backend/: Cargo.toml  test.py
backend/dict/: en.txt
backend/src/: main.rs
backend/src/dict/: mod.rs
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/grid/: Cell.tsx  CompletedRow.tsx  CurrentRow.tsx  EmptyRow.tsx  Grid.tsx
frontend/src/components/keyboard/: Key.tsx  Keyboard.tsx
frontend/src/components/modals/: InfoModal.tsx  SettingsModal.tsx  SettingsSelectBox.tsx
frontend/src/components/navbar/: Navbar.tsx
frontend/src/components/suggestion/: SuggestionList.tsx
frontend/src/constants/: dictionaries.ts  maxwordlengths.ts  settings.ts
frontend/src/lib/: backendapi.ts  userInterval.ts  words.ts
