[package]
name = "wordle-solve-backend"
version = "0.1.0"
authors = ["Taewoong Jang <nyamnyam7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = "1.0.136"
serde_derive = "1.0.136"
ordered-float = "2.10.0"
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]